syntax = "proto3";

package room;

import "google/protobuf/empty.proto";

service RoomService {
  rpc Create(CreateRoomRequest) returns (Room);
  rpc FindOne(OneRoomBody) returns (Room);
}

message CreateRoomRequest {
    string creator_id =1;
    repeated string members = 2;
    bool isGroup = 3;
    string name = 4;
}

message CreateRoomResponse {
  string id = 1;
    bool isSuccess = 2;
}

message OneRoomBody {
  string id =1;
}

message Room {
  string _id =1;
  string name = 2;
  bool isGroup=3;
  repeated string members = 4;
  string created_at=5;
  string updated_at=6;
  string deleted_at = 7;
  bool status = 8;
}